--- a/index.html
+++ b/index.html
@@ -126,6 +126,7 @@
 
     </form>
 
-    
+    <div style="clear:both; text-align:center; color:gray;">© 2017–2022 Company Name</div>
+    <div style="text-align:center; margin-top:10px;">Privacy Terms Support</div>
 </body>
 </html>
