--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         padding: 5px 10px;
         font-size: medium;
         vertical-align: middle;
+        margin-left:150px;
     }
 </style>
 
