--- a/form_js.html
+++ b/form_js.html
@@ -240,9 +240,9 @@
     <div style="clear:both; text-align:center; color:gray;">© 2017–2022 Company Name</div>
 
     <div style="text-align:center; margin-top:10px;">
-        <span><a href="">Privacy</a></span>
-        <span><a href="">Terms</a></span>
-        <span><a href="">Support</a></span>
+        <span><a href="https://osshw-1.vercel.app/form_js.html">Privacy</a></span>
+        <span><a href="https://osshw-1.vercel.app/form_js.html">Terms</a></span>
+        <span><a href="https://osshw-1.vercel.app/form_js.html">Support</a></span>
     </div>
 
     <script>
@@ -273,8 +273,6 @@
                 alert("Please enter today's date.");
             }
         }
-
-        
     </script>
 </body>
 </html>
