--- a/form_style.html
+++ b/form_style.html
@@ -241,9 +241,9 @@
     <div style="clear:both; text-align:center; color:gray;">© 2017–2022 Company Name</div>
 
     <div style="text-align:center; margin-top:10px;">
-        <span><a href="">Privacy</a></span>
-        <span><a href="">Terms</a></span>
-        <span><a href="">Support</a></span>
+        <span><a href="https://osshw-1.vercel.app/form.html">Privacy</a></span>
+        <span><a href="https://osshw-1.vercel.app/form.html">Terms</a></span>
+        <span><a href="https://osshw-1.vercel.app/form.html">Support</a></span>
     </div>
     
 </body>
